--- a/index.css
+++ b/index.css
@@ -29,10 +29,19 @@ html, body
     background-color: #2c3e50;
 }
 
-#wrapper_inner
+#circ_container
 {
 	width: 800px;
 	height: 800px;
 
 	background-color: #27ae60;
+
+}
+
+#circ_container, 
+#circ_container > canvas
+{
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
